fix(Weather): Correct card contrast

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -229,30 +229,17 @@ main {
   border-radius: 8px;
 
   background: #56CCF2;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #2F80ED, #56CCF2);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #2F80ED, #56CCF2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: -webkit-linear-gradient(to right, #548dd8, #56CCF2);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #96aece, #d1e8f0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
   max-width: 300px;
   width: 80%;
-  margin: 1rem auto;
+  margin: 1rem auto 1.5rem auto;
   display: grid;
   grid-template-columns: 1fr 1fr;
   place-items: center;
   padding: 1.5rem;
   font-size: 2rem;
-}
-
-.weather-text {
-  text-align: center;
-  font-weight: 300;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-
-.weather-measure {
-  font-weight: 500;
-  text-shadow: 2px 2px 4px var(--primary-color);
 }
 
 @media screen and (max-width: 400px) {
@@ -262,8 +249,21 @@ main {
   }
 }
 
+.weather-text {
+  text-align: center;
+  font-weight: 500;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.weather-measure {
+  text-shadow: 2px 2px 6px var(--primary-color);
+}
+
 .weather-city {
   font-size: 1.2rem;
+  text-shadow: 2px 2px 8px var(--primary-color);
 }
 
 .weather-image {
